[package]
name = "anchor_social"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_social"

[features]
default = []
cpi = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-attribute-program = "0.31.1"
anchor-derive-accounts = "0.31.1"
anchor-lang = "0.31.1"
solana-program-entrypoint = "3.1.0"
